data/all_generated_tests/raw_wast_tests/br_StackCorruption_228.wast
;; 9. **Test Randomized Operand Stack Push/Pop with Br Instructions:**    - **Description:** Randomize push/pop operations on the operand stack before executing various `br` instructions.    - **Reasoning:** This test stresses stack consistency and the resilience of operand stack management under randomness.    - **Constraint:** Maintain stack height correctness relative to each branch point.    - **Relation to Stack Corruption:** Randomized operations could easily expose improper stack management, resulting in underflows or overflows.

(assert_invalid 
  (module 
    (func $randomized-operand-stack 
      (block (result i32) 
        (i32.const 10) 
        (i32.add (i32.const 5) (i32.const 3)) 
        (br 0) 
        (i32.const 1) 
        (i32.add (i32.const 2) (i32.const 4)) 
      ) 
      (i32.eqz) (drop) 
    ) 
    (func (param i32) (result i32) (local.get 0)) 
  ) 
  "type mismatch"
)